[tool.poetry]
name = "pom_element"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^19.10b0"
tox = "^3.14.5"
pre-commit = "^2.2.0"
flake8 = "^3.7.9"
mypy = "^0.770"
selenium = "^3.141.0"
isort = "^4.3.21"
pytest-selenium = "^1.17.0"
pytest-cov = "^2.8.1"
pydocstyle = "^5.0.2"
pdoc3 = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
mypy = "^0.770"
black = "^19.10b0"

[tool.poetry.extras]
test = ["pytest"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
