[tool.poetry]
name = "pom_elements"
version = "0.1.0"
description = ""
authors = ["Nick Beaird <nicklasbeaird@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
pydocstyle = "^5.0.2"
pdoc3 = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.2"
pre-commit = "^2.2.0"
pytest-cov = "^2.8.1"
pytest-selenium = "^1.17.0"
tox = "^3.14.5"
ipdb = "^0.13.2"
wheel = "^0.38.1"
setuptools = "^46.1.3"
twine = "^3.1.1"

[tool.poetry.extras]
test = ["pytest"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
